--- a/public/profile.css
+++ b/public/profile.css
@@ -234,15 +234,15 @@ input[type="password"]::-webkit-reveal {
 }
 
 .order-status[status="Pending"] {
-    border: 3px solid black;
+    border: 2px solid black;
     border-radius: 5px;
-    background-color: yellow;
+    background-color: rgb(156, 156, 89);
     font-weight: 599;
     position: relative;
 }
 
 .order-status[status="Completed"] {
-    border: 3px solid rgb(0, 0, 0);
+    border: 2px solid rgb(0, 0, 0);
     border-radius: 5px;
     background-color: rgb(83, 126, 87);
     font-weight: 599;
@@ -250,7 +250,7 @@ input[type="password"]::-webkit-reveal {
 }
 
 .order-status[status="Expired"] {
-    border: 3px solid rgb(0, 0, 0);
+    border: 2px solid rgb(0, 0, 0);
     border-radius: 5px;
     background-color: rgb(255, 0, 0);
     font-weight: 599;
